--- a/.github/workflows/mlops_pipeline.yml
+++ b/.github/workflows/mlops_pipeline.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - run: pip install notebook nbconvert numpy pandas tensorflow sklearn matplotlib
+      - run: pip install notebook nbconvert numpy pandas tensorflow scikit-learn matplotlib
       - run: jupyter nbconvert --execute dataSetup&EDA.ipynb --output executed_setup_data.ipynb
 
   feature_engineering:
@@ -22,7 +22,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - run: pip install notebook nbconvert numpy pandas sklearn tensorflow shap
+      - run: pip install notebook nbconvert numpy pandas scikit-learn tensorflow shap
       - run: jupyter nbconvert --execute feature_engineering.ipynb --output executed_feature_engineering.ipynb
 
   automl:
@@ -33,7 +33,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - run: pip install notebook nbconvert numpy pandas tensorflow sklearn h2o optuna
+      - run: pip install notebook nbconvert numpy pandas tensorflow scikit-learn h2o optuna
       - run: jupyter nbconvert --execute automl.ipynb --output executed_automl.ipynb
 
   monitoring:
@@ -44,5 +44,5 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - run: pip install notebook nbconvert numpy pandas sklearn tensorflow mlflow
+      - run: pip install notebook nbconvert numpy pandas scikit-learn tensorflow mlflow
       - run: jupyter nbconvert --execute monitoring.ipynb --output executed_monitoring.ipynb
