--- a/.github/workflows/mlops_pipeline.yml
+++ b/.github/workflows/mlops_pipeline.yml
@@ -4,26 +4,36 @@ on: [push]
 
 jobs:
 
-  setup_data_n_eda:
+  data_setup_and_eda:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - run: pip install notebook nbconvert numpy pandas tensorflow scikit-learn matplotlib
-      - run: jupyter nbconvert --execute dataSetup&EDA.ipynb --output executed_setup_data.ipynb
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install notebook nbconvert numpy pandas tensorflow scikit-learn matplotlib
+      - name: Execute data setup & EDA notebook
+        run: |
+          jupyter nbconvert --execute dataSetup&EDA.ipynb --ExecutePreprocessor.timeout=1800 --output executed_dataSetup_and_EDA.ipynb
 
   feature_engineering:
-    needs: setup_data_n_eda
+    needs: data_setup_and_eda
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - run: pip install notebook nbconvert numpy pandas scikit-learn tensorflow shap
-      - run: jupyter nbconvert --execute feature_engineering.ipynb --output executed_feature_engineering.ipynb
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install notebook nbconvert numpy pandas tensorflow scikit-learn shap matplotlib
+      - name: Execute Feature Engineering notebook
+        run: |
+          jupyter nbconvert --execute feature_engineering.ipynb --ExecutePreprocessor.timeout=1800 --output executed_feature_engineering.ipynb
 
   automl:
     needs: feature_engineering
@@ -33,8 +43,13 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - run: pip install notebook nbconvert numpy pandas tensorflow scikit-learn h2o optuna
-      - run: jupyter nbconvert --execute automl.ipynb --output executed_automl.ipynb
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install notebook nbconvert numpy pandas tensorflow scikit-learn h2o optuna
+      - name: Execute AutoML notebook
+        run: |
+          jupyter nbconvert --execute automl.ipynb --ExecutePreprocessor.timeout=2400 --output executed_automl.ipynb
 
   monitoring:
     needs: automl
@@ -44,5 +59,10 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - run: pip install notebook nbconvert numpy pandas scikit-learn tensorflow mlflow
-      - run: jupyter nbconvert --execute monitoring.ipynb --output executed_monitoring.ipynb
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install notebook nbconvert numpy pandas tensorflow scikit-learn mlflow
+      - name: Execute Monitoring notebook
+        run: |
+          jupyter nbconvert --execute monitoring.ipynb --ExecutePreprocessor.timeout=1800 --output executed_monitoring.ipynb
